# RIKU

./: .travis.yml  CMakeLists.txt  Doxyfile  Readme.md  _r_i_k_u_8h_source.html  _readme_8md_source.html  annotated.html  array_8h_source.html  array__inl_8hpp_source.html  attribute_8h_source.html  classes.html  classriku_1_1array__var-members.html  classriku_1_1array__var.html  classriku_1_1property-members.html  classriku_1_1property.html  classriku_1_1type-members.html  classriku_1_1type.html  classriku_1_1variant__type-members.html  classriku_1_1variant__type.html  config_8h_source.html  dir_05d33cfae0b421eaf28d13f6023c966d.html  dir_28a7991fa319ad04f5050e8b0278e0a4.html  dir_8872dfe177fa4181a97b9eeb1b91c232.html  examples.html  factory_8h_source.html  factory__inl_8hpp_source.html  files.html  function_8h_source.html  function__inl_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  group__registration.html  hierarchy.html  index.html  library_8h_source.html  macros_8h_source.html  md__c_1__users__jay__documents__programming__r_i_k_u_docs_registering_types.html  md__c_1__users__jay__documents__programming__r_i_k_u_docs_using_variants.html  menudata.js  (+37 more)
docs/: CMakeLists.txt  Doxyfile.in  registering_types.md  using_variants.md
include/: RIKU.h
include/riku/: array.h  array_inl.hpp  config.h  factory.h  factory_inl.hpp  function.h  function_inl.hpp  library.h  macros.h  metaprog.hpp  registrar.hpp  type.h  variant.h  variant_inl.hpp
include/riku/mem/: factory.h
include/riku/type/: function.h  generic.h  pointer.h  primitive.h  property.h  template.h
include/riku/util/: macros.h  metaprog.hpp  registrar.hpp
include/riku/variant/: array.h  map.h  map_inl.hpp  ptr.h  ptr_inl.hpp  val.h  val_inl.hpp  var.h  var_inl.hpp  variant_inl.hpp  variant_type.h
msvc/: RIKU.natvis
src/: CMakeLists.txt  factory.cpp  function.cpp  library.cpp  property.cpp  type.cpp  variant.cpp
src/type/: generic.cpp  pointer.cpp  primitive.cpp  template.cpp  type.cpp
src/variant/: array.cpp  map.cpp  ptr.cpp  val.cpp  variant.cpp  variant_type.cpp
test/: CMakeLists.txt  main.cpp
